# efrlfn-mlx

./: .gitignore  NOTICE  README.md  pyproject.toml
efrlfn_mlx/: __init__.py  config.py  convert.py  model.py  pipeline.py
scripts/: convert_to_safetensors.py
tests/parity/: test_efrlfn_parity.py
tests/smoke/: test_forward.py
